--- a/web/src/index.css
+++ b/web/src/index.css
@@ -24,3 +24,19 @@ a {
 .cursive-font {
     font-family: 'Supermercado One', cursive;
 }
+
+.animated {
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	transform-origin: bottom;
+}
+
+.bounce {
+	animation-name: bounce;
+	animation-timing-function: linear;
+}
+@keyframes bounce {
+	0%   { transform: translateY(0); }
+	50%  { transform: translateY(-20px); }
+	100% { transform: translateY(0); }
+}
